# k8s-fdw

./: .gitignore  .travis.yml  BUILD  Makefile  README.md  WORKSPACE  fdw.go  go_fdw--1.0.sql  go_fdw.c  go_fdw.control  go_fdw.go  k8s_fdw--0.1.sql  k8s_fdw.control  test.sql
include/postgresql/: BUILD
include/postgresql/server/: pg_config.h
include/postgresql/server/catalog/: schemapg.h
include/postgresql/server/utils/: fmgroids.h  fmgrprotos.h
lib/fdw/: BUILD  fdw.go  go_fdw.go
pkg/client/: BUILD.bazel  client.go  client_test.go  scan.go  scan_test.go
pkg/client/testdata/: kubeconfig
scripts/: docker-push.sh
src/: BUILD  go_fdw.c
